build/k8s/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "moloon",
    "labels": {
      "name": "moloon"
    }
  }
}
