build/k8s/agents.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: moloon-agent
  labels:
    app: moloon-agent
spec:
  selector:
    matchLabels:
      name: moloon-agent
  template:
    metadata:
      labels:
        name: moloon-agent
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: moloon-agent
          image:   gcr.io/print-cloud-software/moloon:1.0.0
          args: ["agent"]
          ports:
            - containerPort: 3000
              hostPort: 3000
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
      terminationGracePeriodSeconds: 30
